 - release 0.1.16

2003/07/22
 - reverted to ifenslave 1.0.11 because 1.0.12 breaks compatibility with
   older versions while it claims to fix it !
 - release 0.1.17

2003/08/02
 - fixed a bug in mkinstall2 which would prevent it from installing on
   partition devices which contains '/' in their names (eg: /dev/ida/...)

2003/08/17
 - updated pkg to 0.3.5 :
   - unpack accepts a package name
   - chaining of actions has been fixed
   - set_default_perm
   - increased verbosity

2003/09/14
 - changed mkinstall2 to mkinstall and renamed old mkinstall to mkinstall.old
 - updated pkg to 0.3.11. Now works on alpha.
 - included ifenslave 1.0.11 and 1.0.12 with a symlink to let the user choose.
 - release 0.1.18

2003/09/17
 - updated pkg to 0.3.13. Fixed stupid permissions resulting from copy-paste

2003/10/02
 - updated pkg to 0.3.16: Detect more man paths ; newpkg excludes CFLAGS,
   .tgz, .lst, and .dep ; do_config & do_compile_only done in sub-shells ;
   automatic permissions on /etc/profile.d/*. Better handling of symlinks.
 - release 0.1.19

2003/10/26
 - fixes to pkg (0.3.17)
 - release 0.1.20

2003/11/11
 - fixes to pkg (0.3.18) : compute dependencies even in /bin, /sbin & /lib
 - fix compilation of ifenslave
 - release 0.1.21

2003/12/31
 - updates to pkg (0.4.0) : 
    - automatically prepare many arch-specific GCC compile options 
    - added the '=' feature to newpkg
    - differentiate FLXPMAKE and FLXMAKE
    - now FLXARCH and other options are known to the script
 - improved and packaged wdd (WatchDog Daemon)

2004/01/11
 - updates to pkg (0.4.1) : implemented do_release and do_changelog

2004/01/27
 - changed some makefiles to make use of new GCC options provided by pkg-0.4

2004/02/01
 - changed pkg (0.4.3) to use 'readlink' instead of 'file' ; newpkg now
   differentiates between (R)eleased, (P)ackaged, and (D)evel versions.
 - wdd now also does a 'stat("/")' which is useful in case of broken NFSROOT.
 - a new deployment script for wdd
